fix display text readability for alert messages

--- a/tuwel.user.less
+++ b/tuwel.user.less
@@ -2,7 +2,7 @@
 @name TUWEL Catppuccin
 @namespace github.com/Cinnazeyy/TUWEL-Catppuccin
 @homepageURL https://github.com/Cinnazeyy/TUWEL-Catppuccin
-@version 2026.02.01
+@version 2026.02.02
 @updateURL https://github.com/Cinnazeyy/TUWEL-Catppuccin/raw/refs/heads/master/tuwel.user.less
 @supportURL https://github.com/Cinnazeyy/TUWEL-Catppuccin/issues
 @description Soothing pastel theme for TUWEL
@@ -435,6 +435,9 @@
         }
         .login-container .login-divider {
             border-top: 1px solid @surface0;
+        }
+        .alert-danger {
+            --bs-alert-color: @base;
         }
         
         /* ----- MISC FIXES ----- */
